force-app/main/default/objects/aecm__Object_Docs__mdt/aecm__Object_Docs__mdt.object-meta.xml
<CustomObject>
    <label>Object Guides</label>
</CustomObject>