force-app/main/default/objects/aecm__Object_Docs__mdt/fields/aecm__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>aecm__Display_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Indicates the display order for this record when more than one record exists for the same tempest object, i.e. 1 will show first. Default is 1.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>