force-app/main/default/objects/aecm__Object_Docs__mdt/fields/aecm__Footer_Content__c.field-meta.xml
<CustomField>
    <fullName>aecm__Footer_Content__c</fullName>
    <label>Footer Content</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>