force-app/main/default/objects/aecm__Object_Docs__mdt/fields/aecm__Footer_Highlight_Color__c.field-meta.xml
<CustomField>
    <fullName>aecm__Footer_Highlight_Color__c</fullName>
    <defaultValue>&quot;#66cc00&quot;</defaultValue>
    <inlineHelpText>Enter a valid CSS color, i.e. #33cc00, Red</inlineHelpText>
    <label>Footer Highlight Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>