force-app/main/default/objects/aecm__Object_Docs__mdt/fields/aecm__Footer_Icon__c.field-meta.xml
<CustomField>
    <fullName>aecm__Footer_Icon__c</fullName>
    <defaultValue>&quot;standard:solution&quot;</defaultValue>
    <inlineHelpText>A Lightning Design System Icon. e.g. utility:add, standard: account, custom: custom1
https://www.lightningdesignsystem.com/icons/</inlineHelpText>
    <label>Footer Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>