force-app/main/default/objects/aecm__Object_Docs__mdt/fields/aecm__Guide_Text__c.field-meta.xml
<CustomField>
    <fullName>aecm__Guide_Text__c</fullName>
    <label>Guide Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>