force-app/main/default/objects/aecm__Object_Docs__mdt/fields/aecm__Header_Thematic__c.field-meta.xml
<CustomField>
    <fullName>aecm__Header_Thematic__c</fullName>
    <label>Header Thematic</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>