force-app/main/default/objects/aecm__Object_Docs__mdt/fields/aecm__Show_Footer__c.field-meta.xml
<CustomField>
    <fullName>aecm__Show_Footer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Footer</label>
    <type>Checkbox</type>
</CustomField>