force-app/main/default/objects/aecm__Object_Docs__mdt/fields/aecm__Show_Header_Thematic__c.field-meta.xml
<CustomField>
    <fullName>aecm__Show_Header_Thematic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Header Thematic</label>
    <type>Checkbox</type>
</CustomField>