force-app/main/default/objects/aecm__Object_Docs__mdt/fields/aecm__Tempest_Object__c.field-meta.xml
<CustomField>
    <fullName>aecm__Tempest_Object__c</fullName>
    <label>Tempest Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aecm__Capability_Domain__c</fullName>
                <default>true</default>
                <label>aecm__Capability_Domain__c</label>
            </value>
            <value>
                <fullName>aecm__Capability_Area__c</fullName>
            </value>
            <value>
                <fullName>aecm__Capability__c</fullName>
            </value>
            <value>
                <fullName>aecm__Capability_Pain_Point__c</fullName>
            </value>
            <value>
                <fullName>aecm__Function__c</fullName>
            </value>
            <value>
                <fullName>aecm__Solution_Design__c</fullName>
            </value>
            <value>
                <fullName>aecm__Solution_Story__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>